--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<button onclick="reset()">Reset all fields</button>
 		</div>
 		
-		<h3>Your Books:</h3>
+		<h3>Your Books:</h3> <button onclick="clearList()">Clear List</button>
 		<ul id="bookList">
 			
 		</ul>
