--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 		</div>
 		
 		<h3>Your Books:</h3> <button onclick="clearList()">Clear List</button>
+		<input type="text" placeholder="search by book name" id="searchName" />
+		<button onclick="search()">Search</button>
 		<ul id="bookList">
 			
 		</ul>
