--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<button onclick="reset()">Reset all fields</button>
 		</div>
 		
-		<h3>Your Books:</h3> <button onclick="clearList()">Clear List</button>
+		<h3>Your Books:</h3> <button onclick="clearListAndArray()">Clear List</button>
 		<input type="text" placeholder="search by book name" id="searchName" />
 		<button onclick="search()">Search</button>
 		<ul id="bookList">
