--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		</div>
 		
 		<h3>Your Books:</h3> <button onclick="clearListAndArray()">Clear List</button>
-		<input type="text" placeholder="search by book name" id="searchName" />
-		<button onclick="search()">Search</button>
+		<input type="text" placeholder="search by book name" id="searchName" onkeyup="search()" />
+		
 		<ul id="bookList">
 			
 		</ul>
@@ -25,3 +25,4 @@
             
     </body>
 </html>    
+
